# primeri-predavanja

./: .gitignore  01-electro-poly-generated.lp  LICENSE  README.md  pyproject.toml  run-batch.cmd  test.cmd
03-01-linearno programiranje/01-elecro-poly/: electro-poly-generated.lp  electro_poly_linopy.py
03-01-linearno programiranje/01a-chairs-tables/: chairs_tables.py
03-01-linearno programiranje/03-tropic-sun/: tropic_sun.py
03-01-linearno programiranje/04-agri-pro/: agri_pro.py
jupyter_notbooks/: 03_02_03_p_median_problem.ipynb
llm_rest_interactions/: http-client.env.json  http-client.private.env.json  question01.http
metaheuristic-algorithms/: pyproject.toml
metaheuristic-algorithms/metaheuristics/: Metaheuristic.py
metaheuristic-algorithms/metaheuristics/execution/: open_problem.py
metaheuristic-algorithms/metaheuristics/problems/: target_problem.py
metaheuristic-algorithms/metaheuristics/problems/max-ones/: target_problem_max_ones.py
metaheuristic-algorithms/metaheuristics/problems/max_ones/: target_problem_max_ones.py
metaheuristic-algorithms/metaheuristics/target-problem/: target_problem.py
metaheuristic-algorithms/metaheuristics/target-problem/max-ones/: target_problem_max_ones.py
metaheuristic-algorithms/metaheuristics/target_problem/: target_problem.py
metaheuristic-algorithms/metaheuristics/utils/: command_line.py  logs.py
metaheuristics/: pyproject.toml
optimization-problem-solving/: clargs.py  pyproject.toml  test.cmd
optimization-problem-solving/optimization_problem_solving/: solve.py
optimization-problem-solving/optimization_problem_solving/max_ones_problem/: command_line.py  max_ones_problem_binary_representation_solution.py  max_ones_solution.py  solve.py
optimization-problem-solving/optimization_problem_solving/max_ones_problem/outputs/: dimension_25-vns-max-2023-07-06-23-43-22.520346.txt  dimension_25-vns-max-2023-07-08-11-30-34.785047.txt  dimension_25-vns-max-2023-07-08-12-01-36.633969.txt  dimension_25-vns-max-2023-07-08-14-04-04.659995.txt  dimension_25-vns-max-2023-07-08-14-05-18.917931.txt  dimension_25-vns-max-2023-07-08-21-16-50.972845.txt  dimension_25-vns-max-2023-07-08-21-25-05.330214.txt  dimension_25-vns-max-2023-07-09-09-31-19.887394.txt  dimension_25-vns-max-2023-07-09-09-32-21.737830.txt  dimension_25-vns-max-2023-07-09-11-25-12.256057.txt  dimension_25-vns-max-2023-07-09-14-35-53.161919.txt  dimension_25-vns-max-2023-07-09-14-38-38.015793.txt
optimization-problem-solving/optimization_problem_solving/max_ones_problem_solving/: command_line.py  max_ones_problem.py  max_ones_solution.py  solve.py
optimization-problem-solving/optimization_problem_solving/ones_count_problems/: command_line.py  max_ones_problem.py  solve.py
optimization-problem-solving/optimization_problem_solving/utils/: command_line.py  files.py  logger.py
(+179 files in other folders)
