[tool.poetry]
name = "primeri-predavanja"
version = "0.1.0"
description = ""
authors = ["Vladimir Filipovic <vladofilipovic@hotmail.com>"]
readme = "README.md"
packages = [{include = "primeri_predavanja"}]

[tool.poetry.dependencies]
python = "^3.10"
gurobipy = "^10.0.3"
linopy = ">=0.3"
plotnine = "^0.12.4"
networkx = "^3.2.1"
matplotlib = "^3.8.1"
xarray = "^2023.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
