[tool.poetry]
name = "primeri-predavanja"
version = "0.1.0"
description = ""
authors = ["Vladimir Filipovic <vladofilipovic@hotmail.com>"]
readme = "README.md"
packages = [{include = "primeri_predavanja"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
linopy = ">=0.3.15"
plotnine = "^0.12.4"
networkx = "^3.2.1"
matplotlib = "^3.8.1"
xarray = ">=2024.2.0"
torch = "^2.4.1"
highspy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
