[tool.poetry]
name = "metaheuristic-algorithms"
version = "0.1.0"
description = ""
authors = ["Vladimir Filipovic <vladofilipovic@hotmail.com>"]
packages = [{include = "metaheuristic_algorithms"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
path = "^16.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
