[tool.poetry]
name = "metaheuristic-problem-solving"
version = "0.1.0"
description = ""
authors = ["Vladimir Filipovic <vladofilipovic@hotmail.com>"]
readme = "README.md"
packages = [{include = "metaheuristic_problem_solving"}]

[tool.poetry.dependencies]
python = "^3.11"
bitstring = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
